# joycon2-pc

./: .gitignore  README.md  README_CN.md
joycon2_connector/: CMakeLists.txt
joycon2_connector/resources/: app.manifest  app.rc
joycon2_connector/src/: App.cpp  BLECommands.h  ConfigManager.h  DeviceManager.h  JoyConDecoder.h  PlayerManager.h  UI_Pages.h  i18n.h  testapp.cpp  version.h.in
joycon2_connector/src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
testapp/: CMakeLists.txt  build.bat  build_log.txt
testapp/src/: App.cpp  BLECommands.h  ConfigManager.h  DeviceManager.h  JoyConDecoder.cpp  PlayerManager.h  UI_Pages.h  UI_Theme.h  ViGEmManager.h  app_icon.h  i18n.h  testapp.cpp
